--- a/videos.html
+++ b/videos.html
@@ -16,7 +16,8 @@
 				<a href="yellowstone.html">Yellow Stone</a>
 				<a href="videos.html">Videos</a>
 			</nav>
-			<a href="https://youtu.be/9fJEFi3ccwI">Yosmite Video</a>
+			<!-- <a href="https://youtu.be/9fJEFi3ccwI">Yosmite Video</a> -->
+			<iframe width="560" height="315" src="https://www.youtube.com/embed/9fJEFi3ccwI" title="YouTube video player" ></iframe>
 		</main>
 		
 	</body>
