--- a/yellowstone.html
+++ b/yellowstone.html
@@ -11,13 +11,12 @@
 		<main>
 			<h1>Yellow Stone</h1>
 			<h2>Jules Stewart</h2>
+			<blockquote cite="https://en.wikipedia.org/wiki/Yellowstone_National_Park">Yellowstone National Park is an American national park located in the western United States, largely in the northwest corner of Wyoming and extending into Montana and Idaho. It was established by the 42nd U.S. Congress with the Yellowstone National Park Protection Act and signed into law by President Ulysses S. Grant on March 1, 1872.</blockquote>
 			<nav>
 				<a href="yosmite.html">Yosmite</a>
 				<a href="yellowstone.html">Yellow Stone</a>
 				<a href="videos.html">Videos</a>
 			</nav>
-			<h6> This Page is About: </h6>
-			<p>This is the first webpage created by me, in CSC 170.</p>
 			<img src= "Images/yellowstone.jpg">
 			<img src= "https://dynamic-media-cdn.tripadvisor.com/media/photo-o/0b/eb/d2/10/grand-canyon-of-yellowstone.jpg?w=1200&h=-1&s=1">
 		</main>
