--- a/videos.html
+++ b/videos.html
@@ -5,18 +5,19 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Jules Stewart</title>
+		<script src="HTML-JS/javascript.js"></script>
 	</head>
 
 	<body>
 		<main>
 			<h1>Videos</h1>
-			<h2>Jules Stewart</h2>
+			<button onclick="MyFunction()">Click Me</button>
+			<p id="First"></p>
 			<nav>
 				<a href="yosmite.html">Yosmite</a>
 				<a href="yellowstone.html">Yellow Stone</a>
 				<a href="videos.html">Videos</a>
 			</nav>
-			<!-- <a href="https://youtu.be/9fJEFi3ccwI">Yosmite Video</a> -->
 			<iframe width="560" height="315" src="https://www.youtube.com/embed/9fJEFi3ccwI" title="YouTube video player" ></iframe>
 		</main>
 		
