--- a/yosmite.html
+++ b/yosmite.html
@@ -9,21 +9,16 @@
 
 	<body>
 		<main>
-			<h1>Yosemite</h1>
-			<h2>Jules Stewart</h2>
-
+			<h1><b><i><u>Yosemite</u></i></b></h1>
 			<nav>
 				<a href="yosmite.html">Yosmite</a>
 				<a href="yellowstone.html">Yellow Stone</a>
 				<a href="videos.html">Videos</a>
 			</nav>
 
-			<h6> This Page is About: </h6>
-			<p>This is the first webpage created by me, in CSC 170.</p>
-			<img src= "Images/yosmite.jpg">
+			<img src= "Images/yosmite.jpg" alt="Yosmite">
 			
 		</main>
-		
 	</body>
 
 	<footer> 
